HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumTupleArity/Expected.uv
//! Expected diagnostic metadata for the EnumTupleArity rejected-source specimen.

expectedDiagnostic("E-TYP-2008", "Enum-Lit-Tuple-Arity-Err")
